# file-converter

./: .gitignore  LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg
src/: main.py
src/audio_convertio/: __init__.py  audio_convertio.py
src/audio_convertio/classes/: audio_converter.py  custom_exceptions.py
src/audio_convertio/index/: index.py
src/audio_convertio/shared_library/: arguments_validator.py
src/audio_convertio/tests/shared_library/: arguments_validator_test.py
src/classes/: audio_converter.py  custom_exceptions.py
src/shared_library/: arguments_validator.py
src/tests/shared_library/: arguments_validator_test.py
