[metadata]
name = audio_convertio
version = 0.0.2
author = Bruno Dantas de Paiva
author_email = bruno.dantas@poli.ufrj.br
description = Audio ConvertIO: Convert your audio files easily
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
platforms = any
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
url = https://github.com/AudioConvertio/file-converter
project_urls = 
    Bug Tracker = https://github.com/AudioConvertio/file-converter/issues/new?assignees=&labels=&template=bug_report.md&title=
    Source = https://github.com/AudioConvertio/file-converter
    Feature Request = https://github.com/AudioConvertio/file-converter/issues/new?assignees=&labels=&template=feature_request.md&title=

[options]
python_requires = >=3.8
package_dir = =src
packages = 
    audio_convertio
    audio_convertio.classes
    audio_convertio.shared_library
install_requires = 
    pydub>=0.25.1
include_package_data = True